--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: imagekit_io
-description: This Package use Official Documentation of ImageKit.io. To use ImageKit.io API for Flutter Projects. With Progress Value. This Package only required apiKey from ImageKit.io.
-version: 0.0.1
+description: Those who love Dio and Build App for Web. Also This Package use Official Documentation of ImageKit.io. To use ImageKit.io API for Flutter Projects. With Progress Value. This Package only required apiKey from ImageKit.io.
+version: 0.0.2
 homepage: https://github.com/Deepjyoti120/imagekit_io
 
 environment:
